# StopTauHadronic

./: .gitignore  .gitmodules  CMakeLists.txt  setup.sh
SampleProduction/: .gitignore  CMakeLists.txt  setup.sh
SampleProduction/cmake/: FindROOT.cmake
SampleProduction/data/DY1JetsToLL_M-50_TuneCP5_13TeV-madgraphMLM-pythia8_Autumn18/: DY1JetsToLL_M-50_TuneCP5_13TeV-madgraphMLM-pythia8_Autumn18_custom.txt
SampleProduction/data/DY1JetsToLL_M-50_TuneCP5_13TeV-madgraphMLM-pythia8_Fall17/: DY1JetsToLL_M-50_TuneCP5_13TeV-madgraphMLM-pythia8_Fall17_custom.txt
SampleProduction/data/DY3JetsToLL_M-50_TuneCUETP8M1_13TeV-madgraphMLM-pythia8_Summer16/: DY3JetsToLL_M-50_TuneCUETP8M1_13TeV-madgraphMLM-pythia8_Summer16_custom.txt
SampleProduction/data/DY4JetsToLL_M-50_TuneCP5_13TeV-madgraphMLM-pythia8_Fall17/: DY4JetsToLL_M-50_TuneCP5_13TeV-madgraphMLM-pythia8_Fall17_custom.txt
SampleProduction/data/DY4JetsToLL_M-50_TuneCUETP8M1_13TeV-madgraphMLM-pythia8_Summer16/: DY4JetsToLL_M-50_TuneCUETP8M1_13TeV-madgraphMLM-pythia8_Summer16_custom.txt
SampleProduction/data/DYJetsToLL_M-50_TuneCP5_13TeV-madgraphMLM-pythia8_Fall17/: DYJetsToLL_M-50_TuneCP5_13TeV-madgraphMLM-pythia8_Fall17_custom.txt
SampleProduction/data/MuonEG_Run2016B-17Jul2018_ver2-v1_MINIAOD/: MuonEG_Run2016B-17Jul2018_ver2-v1_MINIAOD_custom.txt
SampleProduction/data/MuonEG_Run2016C-17Jul2018-v1_MINIAOD/: MuonEG_Run2016C-17Jul2018-v1_MINIAOD_custom.txt
SampleProduction/data/MuonEG_Run2016E-17Jul2018-v1_MINIAOD/: MuonEG_Run2016E-17Jul2018-v1_MINIAOD_custom.txt
SampleProduction/data/MuonEG_Run2017B-31Mar2018-v1_MINIAOD/: MuonEG_Run2017B-31Mar2018-v1_MINIAOD_custom.txt
SampleProduction/data/MuonEG_Run2017D-31Mar2018-v1_MINIAOD/: MuonEG_Run2017D-31Mar2018-v1_MINIAOD_custom.txt
SampleProduction/data/MuonEG_Run2017F-31Mar2018-v1_MINIAOD/: MuonEG_Run2017F-31Mar2018-v1_MINIAOD_custom.txt
SampleProduction/data/ST_t-channel_top_4f_InclusiveDecays_TuneCP5_13TeV-powheg-madspin-pythia8_Autumn18/: ST_t-channel_top_4f_InclusiveDecays_TuneCP5_13TeV-powheg-madspin-pythia8_Autumn18_custom.txt
SampleProduction/data/ST_tW_antitop_5f_inclusiveDecays_TuneCP5_13TeV-powheg-pythia8_Fall17/: ST_tW_antitop_5f_inclusiveDecays_TuneCP5_13TeV-powheg-pythia8_Fall17_custom.txt
SampleProduction/data/ST_tW_top_5f_inclusiveDecays_13TeV-powheg-pythia8_TuneCUETP8M1_Summer16/: ST_tW_top_5f_inclusiveDecays_13TeV-powheg-pythia8_TuneCUETP8M1_Summer16_custom.txt
SampleProduction/data/ST_tW_top_5f_inclusiveDecays_TuneCP5_13TeV-powheg-pythia8_Autumn18/: ST_tW_top_5f_inclusiveDecays_TuneCP5_13TeV-powheg-pythia8_Autumn18_custom.txt
SampleProduction/data/SingleElectron_Run2016B-17Jul2018_ver2-v1_MINIAOD/: SingleElectron_Run2016B-17Jul2018_ver2-v1_MINIAOD_custom.txt
SampleProduction/data/SingleElectron_Run2016E-17Jul2018-v1_MINIAOD/: SingleElectron_Run2016E-17Jul2018-v1_MINIAOD_custom.txt
SampleProduction/data/SingleElectron_Run2017D-31Mar2018-v1_MINIAOD/: SingleElectron_Run2017D-31Mar2018-v1_MINIAOD_custom.txt
SampleProduction/data/SingleElectron_Run2017E-31Mar2018-v1_MINIAOD/: SingleElectron_Run2017E-31Mar2018-v1_MINIAOD_custom.txt
SampleProduction/data/SingleElectron_Run2017F-31Mar2018-v1_MINIAOD/: SingleElectron_Run2017F-31Mar2018-v1_MINIAOD_custom.txt
SampleProduction/data/SingleMuon_Run2016D-17Jul2018-v1_MINIAOD/: SingleMuon_Run2016D-17Jul2018-v1_MINIAOD_custom.txt
SampleProduction/data/SingleMuon_Run2016E-17Jul2018-v1_MINIAOD/: SingleMuon_Run2016E-17Jul2018-v1_MINIAOD_custom.txt
SampleProduction/data/SingleMuon_Run2016G-17Jul2018-v1_MINIAOD/: SingleMuon_Run2016G-17Jul2018-v1_MINIAOD_custom.txt
SampleProduction/data/SingleMuon_Run2017C-31Mar2018-v1_MINIAOD/: SingleMuon_Run2017C-31Mar2018-v1_MINIAOD_custom.txt
SampleProduction/data/SingleMuon_Run2017D-31Mar2018-v1_MINIAOD/: SingleMuon_Run2017D-31Mar2018-v1_MINIAOD_custom.txt
SampleProduction/data/SingleMuon_Run2018A-17Sep2018-v2_MINIAOD/: SingleMuon_Run2018A-17Sep2018-v2_MINIAOD_custom.txt
SampleProduction/data/SingleMuon_Run2018C-17Sep2018-v1_MINIAOD/: SingleMuon_Run2018C-17Sep2018-v1_MINIAOD_custom.txt
SampleProduction/data/SingleMuon_Run2018D-22Jan2019-v2_MINIAOD/: SingleMuon_Run2018D-22Jan2019-v2_MINIAOD_custom.txt
SampleProduction/data/TTJets_DiLept_TuneCP5_13TeV-madgraphMLM-pythia8_Fall17/: TTJets_DiLept_TuneCP5_13TeV-madgraphMLM-pythia8_Fall17_custom.txt
SampleProduction/data/TTJets_TuneCUETP8M1_13TeV-madgraphMLM-pythia8_Summer16/: TTJets_TuneCUETP8M1_13TeV-madgraphMLM-pythia8_Summer16_custom.txt
SampleProduction/data/TTTo2L2Nu_TuneCP5_13TeV-powheg-pythia8_Fall17/: TTTo2L2Nu_TuneCP5_13TeV-powheg-pythia8_Fall17_custom.txt  TTTo2L2Nu_TuneCP5_13TeV-powheg-pythia8_Fall17_custom_TEST.txt
SampleProduction/data/TTToHadronic_TuneCP5_13TeV-powheg-pythia8_Autumn18/: TTToHadronic_TuneCP5_13TeV-powheg-pythia8_Autumn18_custom.txt
SampleProduction/data/TTToSemiLeptonic_TuneCP5_13TeV-powheg-pythia8_Fall17/: TTToSemiLeptonic_TuneCP5_13TeV-powheg-pythia8_Fall17_custom.txt  TTToSemiLeptonic_TuneCP5_13TeV-powheg-pythia8_Fall17_custom_TEST.txt
SampleProduction/data/TTWJetsToLNu_TuneCP5_13TeV-amcatnloFXFX-madspin-pythia8_Autumn18/: TTWJetsToLNu_TuneCP5_13TeV-amcatnloFXFX-madspin-pythia8_Autumn18_custom.txt
SampleProduction/data/TTWJetsToQQ_TuneCP5_13TeV-amcatnloFXFX-madspin-pythia8_Autumn18/: TTWJetsToQQ_TuneCP5_13TeV-amcatnloFXFX-madspin-pythia8_Autumn18_custom.txt
SampleProduction/data/TTZToQQ_TuneCP5_13TeV-amcatnlo-pythia8_Autumn18/: TTZToQQ_TuneCP5_13TeV-amcatnlo-pythia8_Autumn18_custom.txt
SampleProduction/exec/: CMakeLists.txt  CompareDistributions.cxx  SelectCustomEvent.cc  TestFramework.cc
SampleProduction/include/: Configuration.h  Input.h  Output.h
SampleProduction/jobsub/: jobconfig.sub  jobsub.py  jobsub.sh
SampleProduction/settings/: Selection_TauPair.xml  Selection_TauPair_2017.xml  Selection_TauPair_TEST.xml  TestTemplate.xml  logger.conf
SampleProduction/src/: CMakeLists.txt  Configuration.cc  Input.cc  Output.cc
SampleProduction/utils/: argvparser.cc  argvparser.h  consolecolor.h  easylogging++.cc  easylogging++.h
utils/: CMakeLists.txt
(+177 files in other folders)
